--- a/docs/faq/index.qmd
+++ b/docs/faq/index.qmd
@@ -3,7 +3,8 @@ title: "Frequently Asked Questions"
 comments: false
 ---
 
-Until too many questions are asked, this will be a "Any Question Ever Asked" rather than a FAQ.
+Until too many questions are asked, this will be a "Any Question Ever Asked" 
+rather than a FAQ.
 
 ### Why?
 
