--- a/docs/math/sketches/1/_1.md
+++ b/docs/math/sketches/1/_1.md
@@ -1,14 +1,27 @@
 
 ## AA first look at generative effects
 
--  Central theme of category theory: study of structures and structure-preserving maps.
--  Asking which aspects of structure one wants to preserve becomes the question "what category are you working in?".
--    Example: there are many functions $\mathbb{R} \xrightarrow{f} \mathbb{R}$, which we can think of observations (rather than view $x$ directly we only view $f(x)$). Only some preserve the order of numbers, only some preserve distances between numbers.
--  The less structure that is preserved by our observation of a system, the more 'surprises' when we observe its operations - call these *generative effects*.
--  Consider a world of systems which are points which may or may not be connected. There are 5 partitionings or systems of three points.
-    -  Suppose Alice makes observations on systems with a function $\phi$ which returns whether or not points are connected. Alice also has an operation on two systems called *join* which puts two points in the same partition if they are connected in either of the original systems.
+-  Central theme of category theory: study of structures and 
+   structure-preserving maps.
+-  Asking which aspects of structure one wants to preserve becomes the question
+   "what category are you working in?".
+-    Example: there are many functions $\mathbb{R} \xrightarrow{f} \mathbb{R}$, 
+     which we can think of observations (rather than view $x$ directly we only 
+     view $f(x)$). Only some preserve the order of numbers, only some preserve 
+     distances between numbers.
+-  The less structure that is preserved by our observation of a system, the more 
+   'surprises' when we observe its operations - call these *generative effects*.
+-  Consider a world of systems which are points which may or may not be connected. 
+   There are 5 partitionings or systems of three points.
+    -  Suppose Alice makes observations on systems with a function $\phi$ which 
+       returns whether or not points are connected. Alice also has an operation 
+       on two systems called *join* which puts two points in the same partition 
+       if they are connected in either of the original systems.
         -  Alice's operation is not preserved by the *join* operation.
-        -  Application: Alice is trying to address a possible contagion and needs to know whether or not it is safe to have each region extract their data and then aggregate vs aggregating data and then extracting from it.
+        -  Application: Alice is trying to address a possible contagion and 
+           needs to know whether or not it is safe to have each region extract 
+           their data and then aggregate vs aggregating data and then extracting 
+           from it.
 
 ::: {.callout-important icon=false collapse=false}
 ## Exercise 1-1
@@ -29,12 +42,17 @@ Give an example and non-example for
 
 ## Ordering systems
 
-- The above operation of joining systems can be derived from a more basic structure: order.
-- Let $A \leq B$ be defined as a relationship that holds when $\forall x,y:\ (x,y) \in A \implies (x,y) \in B$
+- The above operation of joining systems can be derived from a more basic 
+  structure: order.
+- Let $A \leq B$ be defined as a relationship that holds when 
+  $\forall x,y:\ (x,y) \in A \implies (x,y) \in B$
 -  \begin{tikzcd} \pagecolor{white}& \boxed{a b c}&\\\boxed{a b} \boxed{c} \arrow[ru] & \boxed{ac}\boxed{b} \arrow[u] & \boxed{a}\boxed{bc} \arrow[lu] \\& \boxed{a}\boxed{b}\boxed{c} \arrow[lu] \arrow[u] \arrow[ru] & \end{tikzcd}
--  The joined system $A \lor B$ is the smallest system that is bigger than both $A$ and $B$.
-- The possibility of a generative effect is captured in the inequality $\phi(A) \lor \phi(B) \leq \phi(A \lor B)$, where $\phi$ was defined above.
-- There was a generative effect because there exist systems violate this (both are individually false for $\phi$ but not when put together).
+- The joined system $A \lor B$ is the smallest system that is bigger than both 
+  $A$ and $B$.
+- The possibility of a generative effect is captured in the inequality 
+  $\phi(A) \lor \phi(B) \leq \phi(A \lor B)$, where $\phi$ was defined above.
+- There was a generative effect because there exist systems violate this (both 
+  are individually false for $\phi$ but not when put together).
 - $\phi$ preserves order but not *join*
 
 
