--- a/docs/math/sketches/1/_3.md
+++ b/docs/math/sketches/1/_3.md
@@ -1,11 +1,12 @@
-
 ::: {.callout-tip icon=false collapse=false}
 ## A *preorder* / *partial order* / *total order* [relation](2.qmd#relation) on a set $X$
 <div id="preorder"/></div>
 
 - Preorder: a binary relation on $X$ that is reflexive and transitive.
-- A partial order (poset) has the additional constraint that $x \leq y \land y \leq x \implies x=y$
-      - We can always get a partial order from a preorder by [quotienting](2.qmd#quotient), so it's not that special.
+- A partial order (poset) has the additional constraint that 
+  $x \leq y \land y \leq x \implies x=y$
+      - We can always get a partial order from a preorder by 
+        [quotienting](2.qmd#quotient), so it's not that special.
 - A total order has all elements comparable.
 :::
 
@@ -61,12 +62,16 @@ For $P$ for some preorder $(P, \leq)$:
 ::: {.callout-important icon=false collapse=false}
 ## Exercise 1-55
 
-<div id="1-55"/></div> Prove that the upper sets on a discrete preorder for some set $X$ is simply the power set $P(X)$
+<div id="1-55"/></div> Prove that the upper sets on a discrete preorder for some 
+set $X$ is simply the power set $P(X)$
 
 ::: {.callout-note collapse=true appearance="minimal"}
 ## Solution
 
-- The upper set criterion is satisfied by any subset, thus all possible subsets are upper sets.
-    - The [binary relation](2.qmd#relation) is equality, thus the upper subset criterion becomes $p \in U \land p = q \implies q \in U$, or alternatively $p \in U \implies p \in U$, which is always satisfied.
+- The upper set criterion is satisfied by any subset, thus all possible subsets 
+  are upper sets.
+    - The [binary relation](2.qmd#relation) is equality, thus the upper subset 
+      criterion becomes $p \in U \land p = q \implies q \in U$, or alternatively 
+      $p \in U \implies p \in U$, which is always satisfied.
 :::
 :::
