--- a/docs/math/sketches/2/_2.md
+++ b/docs/math/sketches/2/_2.md
@@ -18,13 +18,16 @@ Satisfying the following properties:
 - Symmetry: $\forall x,y \in X: x \otimes y = y \otimes x$
 :::
 
-The notation for monoidal product and unit may vary depending on context. $I, \otimes$ are defaults but it may be best to use $(0,+),(1,*),(true, \land)$ (etc.)
+The notation for monoidal product and unit may vary depending on context. 
+$I, \otimes$ are defaults but it may be best to use $(0,+),(1,*),(true, \land)$ 
+(etc.)
 
 ::: {.callout-tip icon=false collapse=false}
 ## A *weak monoidal structure* on a preorder $(X, \leq)$
 
 <div id="weak-smp"/></div>
-Definition is identical to a symmetric monoidal structure, replacing all $=$ signs with $\cong$ signs.
+Definition is identical to a symmetric monoidal structure, replacing all $=$ 
+signs with $\cong$ signs.
 
 :::
 
@@ -314,25 +317,29 @@ Consider $\mathbf{Cost}^{op}$. What is it as a preorder? What is its unit and pr
 
 ::: {.callout-note collapse=true appearance="minimal"}
 ## Solution
-As a preorder, the domain is still $[0,\infty]$ and ordered by the natural $\leq$ relation.  The unit and product are unchanged by taking the opposite preorder, so they are still $0, +$ respectively.
+As a preorder, the domain is still $[0,\infty]$ and ordered by the natural 
+$\leq$ relation.  The unit and product are unchanged by taking the opposite 
+preorder, so they are still $0, +$ respectively.
 
 :::
 :::
 
 ## Monoidal monotone maps
 
-Monoidal montones are examples of *monoidal functors*, specifically *lax* ones.  *Oplax* functors are a dual notion which has the inequalities reversed.
-
+Monoidal montones are examples of *monoidal functors*, specifically *lax* ones.  
+*Oplax* functors are a dual notion which has the inequalities reversed.
 
 ::: {.callout-tip icon=false collapse=false}
 ## A *monoidal monotone map* from $(P,\leq_P,I_P,\otimes_P)$ to $(Q, \leq_Q,I_Q,\otimes_Q)$.
 <div id="monoidal-monotone"/></div>
 
-A [monotone map](../1/4.qmd#monotone-map) $(P,\leq_P) \xrightarrow{f} (Q,\leq_Q)$ satsifying two conditions:
+A [monotone map](../1/4.qmd#monotone-map) $(P,\leq_P) \xrightarrow{f} (Q,\leq_Q)$ 
+satsifying two conditions:
   1. $I_Q \leq_Q f(I_P)$
   2. $\forall p_1,p_2 \in P:$ $f(p_1)\ \otimes_Q\ f(p_2)\ \leq_Q\ f(p_1\ \otimes_P\ p_2)$
 
-If the $\leq$ are replaced with $\cong$, the map is *strong*, and if replaced with $=$, it is *strict*.
+If the $\leq$ are replaced with $\cong$, the map is *strong*, and if replaced 
+with $=$, it is *strict*.
 
 :::
 
@@ -355,23 +362,25 @@ If the $\leq$ are replaced with $\cong$, the map is *strong*, and if replaced wi
 ## Exercise 2-43
 <div id="2-43"/></div>
 
-Consider a proposed monoidal monotone $\mathbf{Bool}\xrightarrow{g}\mathbf{Cost}$ with $g(false)=\infty, g(true)=0$
+Consider a proposed monoidal monotone $\mathbf{Bool}\xrightarrow{g}\mathbf{Cost}$ 
+with $g(false)=\infty, g(true)=0$
 
-- Check that the map is monotonic and that it satisfies both properties of monoidal monotones.
+- Check that the map is monotonic and that it satisfies both properties of 
+  monoidal monotones.
 - Is $g$ strict?
 
 ::: {.callout-note collapse=true appearance="minimal"}
 ## Solution
 
 -  It is monotonic:  $\forall a,b \in \mathbb{B}: a\leq b \implies g(a)\leq g(b)$
-    - there is only one nonidentity case in $\mathbf{Bool}$ to cover, and it is true that $\infty\ \leq_\mathbf{Cost}\ 0$.
+    - there is only one nonidentity case in $\mathbf{Bool}$ to cover, and it is 
+      true that $\infty\ \leq_\mathbf{Cost}\ 0$.
 - Condition on units: $0 \leq_\mathbf{Cost} g(true)$ (actually, it is equal)
 - In $\mathbf{Cost}$: $g(x) + g(y) \geq g(x \land y)$
     - if both true/false, the equality condition holds.
-    - If one is true and one is false, then LHS and RHS are $\infty$ (as $x \land y = False$).
+    - If one is true and one is false, then LHS and RHS are $\infty$ (as 
+      $x \land y = False$).
 - Therefore this is a *strict* monoidal monotone.
-
-
 
 :::
 :::
@@ -395,9 +404,12 @@ Consider a proposed monoidal monotone $\mathbf{Bool}\xrightarrow{g}\mathbf{Cost}
 ## Solution
 
 - The function $d$ asks "Is it zero?'', and the function $u$ asks "Is it finite?''.
-- Both of these questions are monotone: as we traverse forward in $\leq_{Cost}$, we traverse towards being zero or being finite.
-- The first monoidal monotone axiom is satisifed in both because the unit ($0$) is mapped to the unit ($True$).
-- The second monoidal monotone axiom holds for both because addition preserves both things being zero (or not) and both things being finite (or not).
+- Both of these questions are monotone: as we traverse forward in $\leq_{Cost}$, 
+  we traverse towards being zero or being finite.
+- The first monoidal monotone axiom is satisifed in both because the unit ($0$) 
+  is mapped to the unit ($True$).
+- The second monoidal monotone axiom holds for both because addition preserves 
+  both things being zero (or not) and both things being finite (or not).
 - These are strict because, in $\mathbb{B}$, equality and congruence coincide.
 
 
@@ -414,7 +426,8 @@ Consider a proposed monoidal monotone $\mathbf{Bool}\xrightarrow{g}\mathbf{Cost}
 
 ::: {.callout-note collapse=true appearance="minimal"}
 ## Solution
-1.   Yes. Monotonicity holds, and multiplication by $1$ is unital. The operator is symmetric and associative.
+1. Yes. Monotonicity holds, and multiplication by $1$ is unital. The operator 
+   is symmetric and associative.
 2. Exponentiation (say, by $2$) is a *strict* monoidal monotone.
   - $1 = 2^0$ and $2^x * 2^y = 2^{x+y}$
 3. No: monotonicity does not hold (multiplying negative numbers gives a larger number).
