--- a/docs/phil/people/brandom/index.qmd
+++ b/docs/phil/people/brandom/index.qmd
@@ -29,7 +29,9 @@ An American philosopher, born in 1950.
 [^1]: this characterizes the pre-Kantian tradition
 
 ### On Kant and Hegel
-> One cannot open the door enough for Kant to get through while being able to slam it shut before Hegel gets through. (Hegel was too interesting of a reader of Kant)
+> One cannot open the door enough for Kant to get through while being able to 
+slam it shut before Hegel gets through. (Hegel was too interesting of a reader
+of Kant)
 
 ### Sapience
 > It's not what's between your ears, it's what's between you and your peers.
