--- a/docs/phil/people/dewey/index.qmd
+++ b/docs/phil/people/dewey/index.qmd
@@ -6,6 +6,11 @@ John Dewey was an American pragmatist philosopher, 1959-1952.
 ![](/images/headshots/dewey.jpg)
 
 # Rorty on Dewey
-Dewey wants the distinctions between science and philosophy to be rubbed out and replaced with an uncontroversial notion of intelligence trying to solve problems and provide meanings.
+Dewey wants the distinctions between science and philosophy to be rubbed out and 
+replaced with an uncontroversial notion of intelligence trying to solve problems 
+and provide meanings.
 
-While this is a [distinction](/docs/phil/distinctions/broken/objective_subjective.qmd) that Rorty, too, wishes to undermine, Rorty criticizes Dewey (in Experience in Nature [-@dewey1958experience]) as wanting to "use the term 'experience' as an incantatory device to blur every conceivable distinction."
+While this is a [distinction](/docs/phil/distinctions/broken/objective_subjective.qmd) 
+that Rorty, too, wishes to undermine, Rorty criticizes Dewey (in Experience in 
+Nature [-@dewey1958experience]) as wanting to "use the term 'experience' as an 
+incantatory device to blur every conceivable distinction."
