--- a/docs/phil/problems/index.qmd
+++ b/docs/phil/problems/index.qmd
@@ -2,7 +2,8 @@
 title: Philosophical Problems
 ---
 
-This chapter is a collection of situations that are brought up as problems to be solved by various philosophers.
+This chapter is a collection of situations that are brought up as problems to be 
+solved by various philosophers.
 
 # [Agrippan Trilemma](agrippan.qmd)
 
