--- a/docs/phil/distinctions/broken/index.qmd
+++ b/docs/phil/distinctions/broken/index.qmd
@@ -2,7 +2,9 @@
 title: Distinctions broken
 ---
 
-We naturally discretize things in the world into different categories of things, but many times philosophy will find that two things (possibly seemingly opposites) are shown convincingly to being the same in some fundamental sense.
+We naturally discretize things in the world into different categories of things, 
+but many times philosophy will find that two things (possibly seemingly 
+opposites) are shown convincingly to being the same in some fundamental sense.
 
 # [Analytic/synthetic facts](analytic_synthetic.qmd)
 {{< include _analytic_synthetic.md >}}
