--- a/docs/phil/people/brandom/antirep/index.qmd
+++ b/docs/phil/people/brandom/antirep/index.qmd
@@ -2,4 +2,5 @@
 title: Antirepresentationalism
 ---
 
-A lecture series taught in 2020. The course website is [here](https://sites.pitt.edu/~rbrandom/Courses/Antirepresentationalism%20(2020)/AR%202020%20a.html).
+A lecture series taught in 2020. The course website is 
+[here](https://sites.pitt.edu/~rbrandom/Courses/Antirepresentationalism%20(2020)/AR%202020%20a.html).
