--- a/docs/phil/situations/index.qmd
+++ b/docs/phil/situations/index.qmd
@@ -2,7 +2,10 @@
 title: Philosophical situations
 ---
 
-Philosophical 'situations' is a very ambiguous category of anecdotes. They're descriptions of the world (hypothetical or realistic) that can be seen as problems in their own right, or counter-examples to some commonplace theories, or evidence in favor of a particular theory, etc.
+Philosophical 'situations' is a very ambiguous category of anecdotes. They're 
+descriptions of the world (hypothetical or realistic) that can be seen as 
+problems in their own right, or counter-examples to some commonplace theories, 
+or evidence in favor of a particular theory, etc.
 
 # [Auction](auction.qmd)
 
