--- a/docs/research.qmd
+++ b/docs/research.qmd
@@ -4,51 +4,128 @@ comments: false
 ---
 
 # Current
-I am a research software engineer at the [Topos Institute](https://topos.institute/model-based-computing). I work with a [team](https://www.algebraicjulia.org/) developing applied category theory software in Julia. The primary application here is building tools that make scientific computing and scientific knowledge representation easier, more transparent, and more robust to updating one's model of the world. For an overview, see my talk [Combinatorial Representations of Scientific Knowledge](https://www.youtube.com/watch?v=vJRAw8USmYs).
+I am a research software engineer at the 
+[Topos Institute](https://topos.institute/model-based-computing). I work with a 
+[team](https://www.algebraicjulia.org/) developing applied category theory 
+software in Julia. The primary application here is building tools that make 
+scientific computing and scientific knowledge representation easier, more 
+transparent, and more robust to updating one's model of the world. For an 
+overview, see my talk [Combinatorial Representations of Scientific Knowledge](https://www.youtube.com/watch?v=vJRAw8USmYs).
 
 {{< video https://www.youtube.com/embed/vJRAw8USmYs width="560" height="315" >}}
 
 ## Model Exploration
-Many search / optimization problems can be thought of as "exploring a space of models." E.g.:
+Many search / optimization problems can be thought of as "exploring a space of 
+models." E.g.:
 
-- We have a notion of what a chemical reaction network is and want to find one that fits some experimental data
-- We have a notion of an electrical circuit and want to explore candidates that have the same voltage response to some black box we are probing.
-- Neural networks depend heavily on their architecture - can we explore the space of possible architectures in a meaningful way to help us find better ones?
+- We have a notion of what a chemical reaction network is and want to find one 
+  that fits some experimental data
+- We have a notion of an electrical circuit and want to explore candidates that 
+  have the same voltage response to some black box we are probing.
+- Neural networks depend heavily on their architecture - can we explore the 
+  space of possible architectures in a meaningful way to help us find better 
+  ones?
 
-We aim to say something about this process generically by formulating a *language* for model exploration. This language accomodates arbitrary kinds of "primitive" model spaces and instead is focused on how we can compose smaller spaces into larger ones, as described in our ACT 2022 paper [-@brown2022modexp]. [[code](https://github.com/kris-brown/ModelExploration.jl)]
+We aim to say something about this process generically by formulating a 
+*language* for model exploration. This language accomodates arbitrary kinds of 
+"primitive" model spaces and instead is focused on how we can compose smaller 
+spaces into larger ones, as described in our ACT 2022 paper [-@brown2022modexp]. 
+[[code](https://github.com/kris-brown/ModelExploration.jl)]
 
 ## Generalized setting for term rewriting
-Rewriting (i.e. execution of rules of the form: match a pattern, then perform a replacement) is an elegant way to express some computations, as we express our algorithm diagrammatically, rather than in code. We implemented term rewriting to a general setting in our ICGT 2022 paper [-@brown2021rewrite] [[code](https://github.com/AlgebraicJulia/AlgebraicRewriting.jl)]. This is being applied to epidemiology with [Sean Wu](https://slwu89.github.io/).
+Rewriting (i.e. execution of rules of the form: match a pattern, then perform a 
+replacement) is an elegant way to express some computations, as we express our 
+algorithm diagrammatically, rather than in code. We implemented term rewriting 
+to a general setting in our ICGT 2022 paper [-@brown2021rewrite] 
+[[code](https://github.com/AlgebraicJulia/AlgebraicRewriting.jl)]. This is being 
+applied to epidemiology with [Sean Wu](https://slwu89.github.io/).
 
 ## C-set automorphisms
-With a high degree of generality, we consider data that can have many types of symmetries and answer the questions: when are two objects basically the same? How do you compute a canonical form? As described in this [blog post](https://www.algebraicjulia.org/blog/post/2022/01/cset-automorphisms/), this project concerns extending McKay's graph algorithm (implemented as [nauty](https://pallini.di.uniroma1.it/)) to C-sets, so that isomorphic instances can be immediately seen to be equal. [[code](https://github.com/AlgebraicJulia/CSetAutomorphisms.jl)]
+With a high degree of generality, we consider data that can have many types of 
+symmetries and answer the questions: when are two objects basically the same? 
+How do you compute a canonical form? As described in this 
+[blog post](https://www.algebraicjulia.org/blog/post/2022/01/cset-automorphisms/), 
+this project concerns extending McKay's graph algorithm (implemented as 
+[nauty](https://pallini.di.uniroma1.it/)) to C-sets, so that isomorphic 
+instances can be immediately seen to be equal. 
+[[code](https://github.com/AlgebraicJulia/CSetAutomorphisms.jl)]
 
 ## Model enumeration
-As described at the end of this [blog post](https://www.algebraicjulia.org/blog/post/2022/06/chase/#model_enumeration), model enumeration *exhaustively* explores a logically constrained search space. This can be used pedagogically to explain mathematical concepts (e.g. give intuition for [natural transformations](https://www.math3ma.com/blog/what-is-a-natural-transformation) by showing the 10 smallest natural transformations) or in an engineering context as a [model checker](https://en.wikipedia.org/wiki/Model_checking). The logical language we can use to specify constraints is that of finite (co)limit [sketches](https://ncatlab.org/nlab/show/sketch). [[code](https://github.com/kris-brown/ModelEnumeration.jl)]
+As described at the end of this [blog post](https://www.algebraicjulia.org/blog/post/2022/06/chase/#model_enumeration), 
+model enumeration *exhaustively* explores a logically constrained search space. 
+This can be used pedagogically to explain mathematical concepts (e.g. give 
+intuition for [natural transformations](https://www.math3ma.com/blog/what-is-a-natural-transformation) 
+by showing the 10 smallest natural transformations) or in an engineering context 
+as a [model checker](https://en.wikipedia.org/wiki/Model_checking). The logical 
+language we can use to specify constraints is that of finite (co)limit 
+[sketches](https://ncatlab.org/nlab/show/sketch). 
+[[code](https://github.com/kris-brown/ModelEnumeration.jl)]
 
 
 # Past
 ## Knowledge representation and data integration
 
 ### Declarative specification of databases
-Scientists modeling complicated phenomena don't use explicit (formally-specified) models. This is pragmatic, given current available open-source tools, but informal reasoning ulimately leads to serious challenges in communicating scientific results clearly and sharing data. A relational database backend is important for a scalable modeling tool, but a SQL-less interface is also crucial: the complexity of managing database implementation details quickly becomes unmanagable and unextensible as the model complexity increases. I helped develop a Python EDSL to help scientists generate relational databases from a natural declaration of scientific facts and to naturally query and publicly communicate their knowledge base. Our strategy is published [here](https://chemrxiv.org/engage/chemrxiv/article-details/61035b88171fc78221b9a9cd) [-@statt2021dbgen] and [here](https://chemrxiv.org/engage/chemrxiv/article-details/60c73cbf842e650956db1678) [-@statt2021esamp], and it is being commercialized by the startup [Modelyst](https://www.modelyst.com/) by Michael Statt and Brian Rohr.
+Scientists modeling complicated phenomena don't use explicit (formally-specified) 
+models. This is pragmatic, given current available open-source tools, but 
+informal reasoning ulimately leads to serious challenges in communicating 
+scientific results clearly and sharing data. A relational database backend is 
+important for a scalable modeling tool, but a SQL-less interface is also 
+crucial: the complexity of managing database implementation details quickly 
+becomes unmanagable and unextensible as the model complexity increases. I helped 
+develop a Python EDSL to help scientists generate relational databases from a 
+natural declaration of scientific facts and to naturally query and publicly 
+communicate their knowledge base. Our strategy is published 
+[here](https://chemrxiv.org/engage/chemrxiv/article-details/61035b88171fc78221b9a9cd) 
+[-@statt2021dbgen] and [here](https://chemrxiv.org/engage/chemrxiv/article-details/60c73cbf842e650956db1678) 
+[-@statt2021esamp], and it is being commercialized by the startup 
+[Modelyst](https://www.modelyst.com/) by Michael Statt and Brian Rohr.
 
 ### Heterogenous data integration, using Category Theory
 
-There is little standardization in how data is to be represented and stored in many scientific fields. However, the varying schemas of different researchers contain significant overlap in information, and for data-driven fields it is especially beneficial to be able to freely switch from one frame of reference to another.
- Furthermore, when we update our view of the world, it's important to be able to migrate our old data, algorithms, and analysis tools into the new framework. When these tools are expressed in the language of C-sets, this migration can be automated in a verifiable way, described in [Categorical data integration for computational science
-](https://www.sciencedirect.com/science/article/pii/S0927025619302046) [-@brown2019categorical] with computational chemistry as a case study. As stressed in the paper, these migration tools are of importance to scientists who wish to communicate and share data with lower risk of data misinterpretation. This was implemented using [Categorical Query Language](https://conexus.com/data-warehousing-with-cql/), a tool developed by the startup [Conexus](https://conexus.com).
+There is little standardization in how data is to be represented and stored in 
+many scientific fields. However, the varying schemas of different researchers 
+contain significant overlap in information, and for data-driven fields it is 
+especially beneficial to be able to freely switch from one frame of reference to 
+another.
+
+Furthermore, when we update our view of the world, it's important to be able to 
+migrate our old data, algorithms, and analysis tools into the new framework. 
+When these tools are expressed in the language of C-sets, this migration can be 
+automated in a verifiable way, described in 
+[Categorical data integration for computational science](https://www.sciencedirect.com/science/article/pii/S0927025619302046) [-@brown2019categorical] with computational chemistry as a case study. As 
+stressed in the paper, these migration tools are of importance to scientists who 
+wish to communicate and share data with lower risk of data misinterpretation. 
+This was implemented using [Categorical Query Language](https://conexus.com/data-warehousing-with-cql/), 
+a tool developed by the startup [Conexus](https://conexus.com).
 
 
 ## Development of functionals for Density Functional Theory
 
-The simulation of chemical reactions using first-principles techniques requires a theoretical framework that is able to describe a wide range of electronic interactions. Under the direction of [Johannes Voss](http://www.slac.stanford.edu/~vossj/project/xc-functionals/) and with Yasheng Maimaiti and Kai Trepke, I developed [MCML](https://onlinelibrary.wiley.com/doi/10.1002/jcc.26732) [-@brown2021mcml], a new meta exchange-correlation functional, with a semi-empirical approach, fitting the functional form against higher level of theory and experimental benchmark data. By using Bayesian statistics, we enabled uncertainty estimation of the computed reaction energies. This complements the earlier research I did which applied DFT to discover catalysts for sustainable energy applications ([-@ludwig2020atomistic], [-@liu2019ph], [-@ludwig2019solvent], and [-@brown2018simulation]) as well as my earlier experimental chemistry research ([-@heroguel2017catalyst] and [-@chen2017liquid]).
+The simulation of chemical reactions using first-principles techniques requires 
+a theoretical framework that is able to describe a wide range of electronic 
+interactions. Under the direction of 
+[Johannes Voss](http://www.slac.stanford.edu/~vossj/project/xc-functionals/) and 
+with Yasheng Maimaiti and Kai Trepke, I developed 
+[MCML](https://onlinelibrary.wiley.com/doi/10.1002/jcc.26732) [-@brown2021mcml], 
+a new meta exchange-correlation functional, with a semi-empirical approach, 
+fitting the functional form against higher level of theory and experimental 
+benchmark data. By using Bayesian statistics, we enabled uncertainty estimation 
+of the computed reaction energies. This complements the earlier research I did 
+which applied DFT to discover catalysts for sustainable energy applications 
+([-@ludwig2020atomistic], [-@liu2019ph], [-@ludwig2019solvent], and 
+[-@brown2018simulation]) as well as my earlier experimental chemistry research 
+([-@heroguel2017catalyst] and [-@chen2017liquid]).
 
 ## Formal methods
 
-I briefly rotated with the [Barrett](https://theory.stanford.edu/~barrett) group at Stanford to learn about formal methods and made small contributions. [-@mann2021pono] and [-@mann2021smt]
+I briefly rotated with the [Barrett](https://theory.stanford.edu/~barrett) group 
+at Stanford to learn about formal methods and made small contributions. 
+[-@mann2021pono] and [-@mann2021smt]
 
-I also interned at Google where we applied the [Lean theorem prover](https://leanprover-community.github.io/index.html). My final presentation was recorded [here](https://youtu.be/gj3XD8gK0Ho).
+I also interned at Google where we applied the 
+[Lean theorem prover](https://leanprover-community.github.io/index.html). My 
+final presentation was recorded [here](https://youtu.be/gj3XD8gK0Ho).
 
 # CV
 
